purning and fixing stretched out images

--- a/resources/assets/sass/blocks/block-styles.scss
+++ b/resources/assets/sass/blocks/block-styles.scss
@@ -21,9 +21,8 @@
 	height: auto;
 	img {
 		object-fit: cover;
-		object-position: center left;
+		object-position: center center;
 		width: auto;
-		min-height: 100vw;
 		@include screen-px(400) {
 			min-height: 400px;
 		}
@@ -134,19 +133,6 @@ a img.aligncenter {
 	margin-right: auto;
 	line-height: 1.1;
 	a { color: $white !important; }
-}
-.wp-block-willamette-blocks-image-box__content {
-	.wp-block-column > h1, .wp-block-column > h2, .wp-block-column > h3, .wp-block-column > h4 {
-		color: $white;
-	}
-
-	h1, h2, h3, h4 {
-		a {
-			color: $white !important;
-			text-decoration: none !important;
-			width: 100%;
-		}
-	}
 }
 .wp-block-column > h1, .wp-block-column > h2, .wp-block-column > h3, .wp-block-column > h4 {
 	font-family: $alt-header-font;
